[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Maps.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Maps.gd" type="Script" id=2]
[ext_resource path="res://arte/map/tilesets/basic_test.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/Switch.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/mob.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/sound_source.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/sound_source.gd" type="Script" id=7]
[ext_resource path="res://scenes/CanvasModulate.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=9]

[node name="level_test" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="map" parent="nav" index="0"]

tile_set = ExtResource( 3 )
collision_layer = 1015809
collision_mask = 1015809
tile_data = PoolIntArray( -524277, 2, 0, -524276, 4, 0, -524275, 3, 0, -524274, 2, 0, -458741, 5, 0, -458740, 0, 0, -458739, 0, 0, -458738, 5, 0, -393209, 2, 0, -393208, 4, 0, -393207, 3, 0, -393206, 4, 0, -393205, 1, 0, -393204, 0, 0, -393203, 0, 0, -393202, 1, 0, -393201, 3, 0, -393200, 4, 0, -393199, 3, 0, -393198, 2, 0, -327673, 5, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 5, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262137, 1, 0, -262136, 4, 0, -262135, 3, 0, -262134, 4, 0, -262133, 2, 0, -262132, 7, 0, -262131, 7, 0, -262130, 2, 0, -262129, 3, 0, -262128, 4, 0, -262127, 3, 0, -262126, 1, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 5, 0, -196596, 0, 0, -196595, 0, 0, -196594, 5, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 5, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 8, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 5, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 8, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 5, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 1, 0, 65551, 4, 0, 65552, 3, 0, 65553, 4, 0, 65554, 3, 0, 65555, 4, 0, 65556, 3, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 2, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 5, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 5, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 1, 0, 262156, 4, 0, 262157, 3, 0, 262158, 4, 0, 262159, 3, 0, 262160, 4, 0, 262161, 3, 0, 262162, 4, 0, 262163, 3, 0, 262164, 1, 0 )

[node name="world_pos" parent="nav" index="1"]

position = Vector2( 580.332, 281.496 )

[node name="switch_2" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 493.436, 15.1052 )
tile_map = NodePath("../nav/map")
tiles = [ Vector2( 9, -1 ), Vector2( 9, 0 ) ]

[node name="mob_container" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="enemy_01" type="Node" parent="mob_container" index="0"]

_sections_unfolded = [ "Pause" ]

[node name="mob" parent="mob_container/enemy_01" index="0" instance=ExtResource( 5 )]

position = Vector2( 800, -420 )
patrol_start_path = NodePath("../start_position_01")
patrol_mid_path = NodePath("../mid_position_01")
patrol_end_path = NodePath("../end_position_01")
player_path = NodePath("../../../Player")
nav_path = NodePath("../../../nav")
GUI_path = NodePath("../../../CanvasLayer/GUI")

[node name="start_position_01" type="Position2D" parent="mob_container/enemy_01" index="1"]

position = Vector2( 790, -430 )

[node name="mid_position_01" type="Position2D" parent="mob_container/enemy_01" index="2"]

position = Vector2( 803.296, 217.175 )
_sections_unfolded = [ "Transform" ]

[node name="end_position_01" type="Position2D" parent="mob_container/enemy_01" index="3"]

position = Vector2( 1300, 230 )

[node name="sound_source" parent="." index="3" instance=ExtResource( 6 )]

editor/display_folded = true
position = Vector2( 1110, -290 )
script = ExtResource( 7 )

[node name="interact_button" parent="sound_source" index="3"]

z_as_relative = false

[node name="CanvasModulate" parent="." index="4" instance=ExtResource( 8 )]

color = Color( 0.148438, 0.148438, 0.148438, 1 )

[node name="Player" parent="." index="5" instance=ExtResource( 9 )]

position = Vector2( 311.818, 61.5874 )
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Transform", "Visibility", "Z Index" ]

[node name="sprite" parent="Player" index="1"]

z_as_relative = false

[node name="Light2D" parent="Player" index="14"]

rotation = 0.0
shadow_color = Color( 0.0110588, 0.0390625, 0.0390625, 0 )

[node name="Light2D2" parent="Player" index="15"]

mode = 2

[node name="Switch" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 821.296, -61.6134 )
on = false
tile_map = NodePath("../nav/map")
tiles = [ Vector2( 12, -4 ), Vector2( 13, -4 ) ]

[node name="GUI" parent="CanvasLayer" index="0"]

_sections_unfolded = [ "Anchor", "Margin", "custom_constants" ]

[connection signal="settings_changed" from="nav/map" to="." method="_on_map_settings_changed"]

[connection signal="area_entered" from="sound_source" to="Player" method="_on_sound_source_area_entered"]

[connection signal="area_exited" from="sound_source" to="Player" method="_on_sound_source_area_exited"]

[connection signal="can_interact" from="Player" to="sound_source" method="_on_Player_can_interact"]

[connection signal="cannot_interact" from="Player" to="sound_source" method="_on_Player_cannot_interact"]


[editable path="mob_container/enemy_01/mob"]
[editable path="sound_source"]
[editable path="Player"]
